Fix overflow issue on body

--- a/app/[lng]/global.css
+++ b/app/[lng]/global.css
@@ -11,6 +11,7 @@ body {
   );
   display: flex;
   flex-direction: column;
+  margin: 0;
   min-height: 100vh;
   min-width: 100vw;
 }
